# prismlink-vlc

./: .gitignore  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
c_core/: CMakeLists.txt
c_core/lib/ds/: generic_queue.c  generic_queue.h
c_core/scripts/: run_tests.sh
c_core/src/: color_map.c  color_map.h  decoder.c  decoder.h  encoder.c  encoder.h  protocol.c  protocol.h
c_core/tests/: test_generic_queue.c
docs/: project_book.md
